Demo Project/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - sunnyhitachi.com
      secretName: tls-secret
  rules:
    - host: "sunnyhitachi.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: react
                port:
                  number: 3000
    # - host: "example.devopspro.in"
    #   http:
    #     paths:
    #       - pathType: Prefix
    #         path: /sample-2
    #         backend:
    #           service:
    #             name: sample-2
    #             port:
    #               number: 3000
    # - host: "sample-1.devopspro.in"
    #   http:
    #     paths:
    #       - pathType: Prefix
    #         path: "/"
    #         backend:
    #           service:
    #             name: sample-3
    #             port:
    #               number: 3000
    # - host: "sample-2.devopspro.in"
    #   http:
    #     paths:
    #       - pathType: Prefix
    #         path: "/"
    #         backend:
    #           service:
    #             name: sample-4
    #             port:
    #               number: 3000
$ipAddress = "192.168.49.2"
$uri = "http://sunnyhitachi.com"
$headers = @{
    Host = "sunnyhitachi.com"
}
Invoke-WebRequest -Uri $uri -Headers $headers -UseBasicParsing
